# atl-core

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: ci.yml
benches/: merkle_bench.rs
src/: error.rs  lib.rs  prelude.rs
src/core/: checkpoint.rs  jcs.rs  merkle.rs  mod.rs  receipt.rs  verify.rs
src/core/merkle/: consistency.rs  crypto.rs  helpers.rs  inclusion.rs  mod.rs  root.rs  types.rs
src/core/merkle/tests/: adversarial_tests.rs  consistency_tests.rs  crypto_tests.rs  inclusion_tests.rs  mod.rs
src/core/ots/: attestation.rs  builder.rs  error.rs  extract.rs  mod.rs  op.rs  ser.rs  timestamp.rs
src/core/verify/: convenience.rs  helpers.rs  iso8601.rs  mod.rs  super_tree.rs  types.rs  verifier.rs
src/core/verify/anchors/: bitcoin_ots.rs  mod.rs  rfc3161.rs
src/core/verify/tests/: convenience_tests.rs  mod.rs  rfc3161_tests.rs  types_tests.rs  verification_tests.rs  verifier_tests.rs
test_data/: README.md
test_data/ots/: README.md  calendar-response-1.hash  large-test.ots  small-test.ots
test_data/receipts/invalid/: invalid_hash_format.atl  malformed_json.atl  unsupported_version.atl
test_data/receipts/valid/: minimal.atl  with_anchors.atl  with_metadata.atl
test_data/vectors/jcs/: cases.json
test_data/vectors/merkle/: trees.json
tests/: integration.rs  lib_exports_tests.rs  ots_calendar_integration.rs  ots_fixtures.rs  proptests.rs
