[package]
name = "atl-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "Apache-2.0"
description = "Pure cryptographic library for ATL Protocol v1 (Anchored Transparency Log)"
repository = "https://github.com/evidentum/atl-core"
keywords = ["transparency-log", "merkle-tree", "cryptography", "verification"]
categories = ["cryptography", "data-structures"]

[dependencies]
# Core cryptographic dependencies (always required)
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde"] }
thiserror = "1"
hex = "0.4"
base64 = "0.22"
subtle = "2"

[dev-dependencies]
proptest = "1"
criterion = "0.5"

[features]
default = []
# No optional features - atl-core is always minimal

[[bench]]
name = "merkle_bench"
harness = false

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
