[package]
name = "atl-core"
version = "0.9.0"
edition = "2021"
rust-version = "1.92.0"
license = "Apache-2.0"
description = "Pure cryptographic library for ATL Protocol v1 (Anchored Transparency Log)"
repository = "https://github.com/evidentum/atl-core"
keywords = ["transparency-log", "merkle-tree", "cryptography", "verification"]
categories = ["cryptography", "data-structures"]

[dependencies]
# Core cryptographic dependencies (always required)
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde"] }
thiserror = "1"
hex = "0.4"
base64 = "0.22"
subtle = "2"

# Optional cryptographic dependencies
cryptographic-message-syntax = { version = "0.27", optional = true }
bcder = { version = "0.7", optional = true }
bitcoin_hashes = { version = "0.14", optional = true }

[dev-dependencies]
proptest = "1"
criterion = "0.5"

[features]
default = []
rfc3161-verify = ["dep:cryptographic-message-syntax", "dep:bcder"]
bitcoin-ots = ["dep:bitcoin_hashes"]

[[bench]]
name = "merkle_bench"
harness = false

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
